--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,15 +1,31 @@
 header
 {
+    padding: 0px 20px;
+
     .header-inner
     {
+        display: grid;
         max-width: 1200px;
         margin: auto;
         padding: 40px 0px;
 
         #logo
         {
+            display: inline-block;
             font-size: 40px;
             font-weight: bold;
+            grid-column: 1/3;
+        }
+
+        #menu-bar
+        {
+            display: inline-block;
+            grid-column: 2/3;
+
+            li 
+            {
+                
+            }
         }
     }
 }
