--- a/src/styles/globals/_base.scss
+++ b/src/styles/globals/_base.scss
@@ -8,4 +8,11 @@ body
         text-decoration: none;
         color: inherit;
     }
+
+    ul 
+    {
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+    }
 }
