--- a/src/styles/components/_product-grid.scss
+++ b/src/styles/components/_product-grid.scss
@@ -1,7 +1,5 @@
-.grid
+.product-grid
 {
-    max-width: 1200px;
-    margin: auto;
     padding: 0px 20px;
     display: grid;
     grid-column-gap: 15px;
