Shopping cart developments

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,5 +10,6 @@
 @import "styles/components/status";
 @import "styles/components/button";
 @import "styles/components/alert";
-// pages
-@import "styles/pages/product-page";
+// screens
+@import "styles/screens/product-screen";
+@import "styles/screens/cart-screen";
