--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,21 +1,27 @@
 button
 {
-    border: 4px solid $green;
-    border-radius: 8px;
-    background: $white;
-    padding: 16px 32px; 
-    padding-top: 18px;
-    text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.24s ease;
-    color: $green;
-
-    &:hover
+    margin: 0px;
+    padding: 0px;
+    
+    &.default
     {
-        background: $green;
-        color: $white;
+        border: 4px solid $green;
+        border-radius: 8px;
+        background: $white;
+        padding: 16px 32px; 
+        padding-top: 18px;
+        text-transform: uppercase;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: all 0.24s ease;
+        color: $green;
+    
+        &:hover
+        {
+            background: $green;
+            color: $white;
+        }
     }
 }
