--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,11 @@ header
 
     .header-inner
     {
+        max-width: 1200px;
+        margin: auto;
         display: grid;
+        grid-template-columns: auto minmax(0, 1fr);
+        grid-template-areas: "logo menubar";
         padding: 40px 0px;
 
         #logo
@@ -12,13 +16,134 @@ header
             display: inline-block;
             font-size: 40px;
             font-weight: bold;
-            grid-column: 1/3;
+            grid-area: logo;
+            letter-spacing: 0px;
+            transition: all 0.24s ease-in-out;
+
+            &:hover
+            {
+                letter-spacing: 16px;
+            }
         }
 
         #menu-bar
         {
-            display: inline-block;
-            grid-column: 2/3;
+            display: inline-flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding-top: 4px;
+            grid-area: menubar;
+            text-align: right;
+            vertical-align: middle;
+
+            li 
+            {
+                display: inline-block;
+                font-size: 24px;
+                margin-left: 40px;
+
+                &:first-child
+                {
+                    margin-left: 0px;
+                }
+
+                #cart-link
+                {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 48px;
+                    height: 48px;
+                    position: relative;
+                    transform: scale(1);
+                    transition: all 0.08s linear;
+
+                    &::before
+                    {
+                        content: "";
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        z-index: -1;
+                        border-radius: 50%;
+                        background: $white;
+                        transition: inherit;
+                    }
+
+                    i, svg 
+                    {
+                        position: relative;
+                        top: 2px;
+                        right: 1px;
+                    }
+                    
+                    span 
+                    {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: auto;
+                        height: 24px;
+                        position: absolute;
+                        top: -8px;
+                        left: calc(100% - 16px);
+                        padding: 0px 8px;
+                        border-radius: 16px;
+                        // padding-top: 5px;
+                        background: $green;
+                        text-align: center;
+                        font-size: 16px;
+                        font-weight: bold;
+                        color: $white;
+                        transition: inherit;
+                    }
+
+                    &:hover
+                    {
+                        color: $white;
+                        transform: scale(1.25);
+
+                        &::before 
+                        {
+                            background: $black;
+                        }
+
+                        span 
+                        {
+                            top: -12px;
+                            left: calc(100% - 4px);
+                        }
+                    }
+                }
+
+                #sign-in-link
+                {
+                    display: block;
+                    position: relative;
+
+                    &::before
+                    {
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        left: 1px;
+                        bottom: -2px;
+                        width: 0%;
+                        height: 2px;
+                        background: $black;
+                        transition: all 0.2s ease-out;
+                    }
+
+                    &:hover
+                    {
+                        &::before 
+                        {
+                            width: calc(100% - 2px);
+                        }
+                    }
+                }
+            }
         }
     }
 }
