--- a/src/styles/screens/_product-screen.scss
+++ b/src/styles/screens/_product-screen.scss
@@ -55,5 +55,31 @@
             margin-bottom: 20px;
             font-size: 20px;
         }
+
+        label
+        {
+            font-size: 24px;
+        }
+
+        input 
+        {
+            margin-left: 8px;
+            margin-right: 24px;
+            border: 4px solid $black;
+            border-radius: 8px;
+            padding: 16px;
+            padding-top: 18px;
+            font-size: 20px;
+            background: $white;
+            color: $black;
+            transition: all 0.24s ease;
+
+            &:hover,
+            &:focus 
+            {
+                background: $black;
+                color: $white;
+            }
+        }
     }
 }
